--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margen_app">16dp</dimen>
+    <dimen name="margen_btn">8dp</dimen>
 </resources>
