--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragments.InicioFragment"
-    android:padding="@dimen/margen_app">
+    tools:context=".fragments.PerfilFragment">
 
-    <ImageView
+    <Button
+        android:id="@+id/btnBorrarCuenta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/eurocode"
-        android:layout_gravity="center"/>
+        android:text="@string/btn_borrar_cuenta"/>
 
 </FrameLayout>
