--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="margen_app">16dp</dimen>
     <dimen name="margen_btn">8dp</dimen>
+    <dimen name="margen_btn_cartelera">50dp</dimen>
 </resources>
