--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,22 @@
         android:inputType="textEmailAddress"
         android:layout_centerInParent="true"/>
 
+    <TextView
+        android:id="@+id/tvUsuario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etEmail"
+        android:layout_marginTop="@dimen/margen_app"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="@dimen/tv_size"/>
+
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_below="@id/etEmail"
+        android:layout_below="@id/tvUsuario"
         android:hint="@string/hintetPassword"
         android:inputType="textPassword"
         android:layout_marginTop="@dimen/margen_app"/>
@@ -66,6 +76,15 @@
             android:layout_marginStart="@dimen/margen_btn"/>
 
     </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tvValidPwd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/llBotones"
+        android:layout_marginTop="@dimen/margen_app"
+        android:text="@string/tv_valid_pwd"/>
 
 
 
