--- a/app/src/main/res/layout/fragment_cartelera.xml
+++ b/app/src/main/res/layout/fragment_cartelera.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragments.CarteleraFragment">
 
     <LinearLayout
@@ -24,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:entries="@array/cines"
-            />
+            android:entries="@array/cines" />
 
     </LinearLayout>
 
@@ -38,6 +37,7 @@
         android:layout_below="@+id/llCartelera">
 
         <Button
+            android:id="@+id/btnCartelera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
