--- a/app/src/main/res/layout/fragment_cartelera.xml
+++ b/app/src/main/res/layout/fragment_cartelera.xml
@@ -43,6 +43,27 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/btnCartelera"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvTituloCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tituloCartelera"
+                android:textAlignment="center"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvCartCines"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCartelera"
             android:layout_width="match_parent"
