--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="margen_btn_cartelera">50dp</dimen>
     <dimen name="tv_size">20sp</dimen>
     <dimen name="tv_usuario_size">40sp</dimen>
+    <dimen name="titulo">20dp</dimen>
 </resources>
