--- a/app/src/main/res/layout/imagen_item.xml
+++ b/app/src/main/res/layout/imagen_item.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/ivImagen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
