--- a/app/src/main/res/layout/fragment_taquilla.xml
+++ b/app/src/main/res/layout/fragment_taquilla.xml
@@ -67,6 +67,31 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/llDetalle3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/llDetalle2"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/margen_app">
+
+        <TextView
+            android:id="@+id/tvSalaPelicula"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:text="@string/sala_pelicula"/>
+
+        <TextView
+            android:id="@+id/tvRepreSala"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textStyle="bold"/>
+
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
