--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,4 +8,19 @@
         <item>MENDEZ ALVARO</item>
         <item>PRINCIPE PIO</item>
     </string-array>
+
+    <string-array name="numeroEntradas" >
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+
+    </string-array>
+
+
 </resources>
