--- a/app/src/main/res/layout/fragment_taquilla.xml
+++ b/app/src/main/res/layout/fragment_taquilla.xml
@@ -280,6 +280,7 @@
         android:layout_height="wrap_content"
         android:text="@string/tv_agradecimiento"
         android:textAlignment="center"
+        android:layout_below="@+id/tvButacas"
         android:textSize="@dimen/tv_gracias"
         android:layout_centerInParent="true"
         android:textColor="@color/colorPrimaryVariant"/>
