--- a/app/src/main/res/layout/fragment_taquilla.xml
+++ b/app/src/main/res/layout/fragment_taquilla.xml
@@ -6,8 +6,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.TaquillaFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvTaquilla"
@@ -285,15 +292,14 @@
         android:layout_centerInParent="true"
         android:textColor="@color/colorPrimaryVariant"/>
 
-    <ImageView
-        android:layout_width="154dp"
-        android:layout_height="167dp"
-        android:layout_below="@+id/llButacas"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margen_app"
-        app:srcCompat="@drawable/eurocode" />
+        <ImageView
+            android:id="@+id/ivTaquilla"
+            android:layout_width="154dp"
+            android:layout_height="167dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/eurocode" />
 
-    <Button
+        <Button
         android:id="@+id/btnEntradas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -303,6 +309,8 @@
         android:layout_marginBottom="@dimen/margen_app"
         android:layout_alignParentBottom="true" />
 
+    </LinearLayout>
 
+    </ScrollView>
 
 </RelativeLayout>
